--- a/crates/sokudo-io/Cargo.toml
+++ b/crates/sokudo-io/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 [dependencies]
 serde.workspace = true
 glam.workspace = true
+thiserror.workspace = true
 
 ron = "0.8.1"
-thiserror = "1.0.64"
