--- a/crates/sokudo-io/Cargo.toml
+++ b/crates/sokudo-io/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 serde.workspace = true
 glam.workspace = true
 thiserror.workspace = true
+parry3d.workspace = true
 
 ron = "0.8.1"
