--- a/crates/sokudo-playback/Cargo.toml
+++ b/crates/sokudo-playback/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 sokudo-io.workspace = true
 thiserror.workspace = true
+glam.workspace = true
 bevy = { version = "0.14.2", features = [ "dynamic_linking" ] }
 bevy_mod_picking = "0.20.1"
